# data-platform-copilot-local

./: README.md  pyproject.toml
data/corpus/: audit_extract_2026_04_04.json  deployment_2026_04_03_billing.json  dq_report_2026_week14.json  incident_2026_04_04_billing_failure.json  pipeline_run_2026_04_04.json  runbook_billing_daily.json
data/eval/: cases.json
src/data_platform_copilot/: __init__.py  agent.py  cli.py  evaluation.py  ingest.py  models.py  retrieval.py
src/data_platform_copilot/connectors/: foundry.py
tests/: test_agent.py  test_evaluation.py
